--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -15,6 +15,7 @@
   }
 
   .row-info {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,9 +24,13 @@
     border: 1px solid $border-color;
     background: #f8f9fa;
     border-top: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
   }
 
   .column {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,6 +41,10 @@
     border: 1px solid $border-color;
     border-top: none;
     border-left: none;
+    overflow: visible;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
   }
 
   .row-data {
@@ -55,8 +64,39 @@
     outline: none;
     &.selected {
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-color;
       z-index: 2;
+    }
+  }
+
+  .col-resize,
+  .row-resize {
+    position: absolute;
+    background-color: $primary-color;
+    opacity: 0;
+    z-index: 1;
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .col-resize {
+    top: 0;
+    bottom: 0;
+    right: -1px;
+    width: 4px;
+    &:hover {
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize {
+    left: 0;
+    right: 0;
+    bottom: -1px;
+    height: 4px;
+    &:hover {
+      cursor: row-resize;
     }
   }
 }
